Harden destructive memory lifecycle plans